--- a/tcms/telemetry/templates/telemetry/include/filters.html
+++ b/tcms/telemetry/templates/telemetry/include/filters.html
@@ -73,6 +73,8 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'telemetry/css/testing/telemetry.css' %}" />
 
+<script src="{% static 'telemetry/js/testing/filters.js' %}"></script>
+
 <script src="{% static 'moment/min/moment-with-locales.min.js' %}"></script>
 <script src="{% static 'eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js' %}"></script>
 <script src="{% static 'bootstrap-select/dist/js/bootstrap-select.min.js' %}"></script>
